# digitalmarch

./: Cargo.toml  default.nix  flake.nix  publickey.txt
.github/workflows/: rust.yml
blog/: hello_world.md
src/: main.rs
src/logger/: logger.rs
src/resources/: mod.rs
src/views/: about.rs  mod.rs
src/views/blog/: blog.rs  mod.rs
src/views/site/: about.rs  index.rs  mod.rs  projects.rs  publickey.rs
static/: index.html
static/blog/: Hello-World!_2022-10-11.html  hello_world.html
static/css/: main.css
templates/: blog_post.tmpl
