[package]
name = "digitalmarch"
version = "0.1.0"
authors = ["SVD <78773583+slaved@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = { version= "0.4", features = ["std"] }
chrono = "0.4"