[package]
name = "digitalmarch"
version = "0.1.0"
authors = ["SVD <78773583+slaved@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = { version= "0.4", features = ["std"] }
chrono = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
actix-files = "0.6.2"