[package]
name = "digitalmarch"
version = "0.1.0"
authors = ["SVD <78773583+slaved@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = { version= "0.4", features = ["std"] }
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9"
actix-files = "0.6.2"
pulldown-cmark = "0.9.2"
getopts = "0.2"
itertools = "0.10.5"
chrono = "0.4.22"